--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:dist="http://schemas.android.com/apk/distribution"
           package="com.celeste.thermco">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <dist:module dist:instant="true"/>
 
@@ -11,7 +12,9 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:usesCleartextTraffic="true"
+    >
         <activity android:name=".Setting">
         </activity>
         <activity android:name=".defineT">
