refactor de l'envoi et meilleur design avec theme

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     >
         <activity android:name=".Setting">
         </activity>
-        <activity android:name=".defineT">
+        <activity android:name=".DefineT">
         </activity>
         <activity
                 android:name=".MainActivity"
