correction des bugs avec l'acces au serveur et amelioration design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
     >
         <activity android:name=".Setting">
         </activity>
-        <activity android:name=".DefineT">
+        <activity android:name=".DefineT"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
                 android:name=".MainActivity"
